--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^2.0.0"
+    "electron": "^2.0.0",
+    "electron-reload": "^1.2.5"
   }
 }
