--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^2.0.0",
-    "electron-reload": "^1.2.5"
+    "electron": "4.1.3",
+    "electron-reload": "1.4.0"
   }
 }
