--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "pretty": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
