--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@types/jest": "^23.3.11",
+    "@types/lodash": "4.14.142",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "@types/react-redux": "^6.0.12",
+    "@types/react-redux": "7.1.4",
     "@types/react-router-dom": "^4.3.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
@@ -116,7 +117,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "@types/lodash": "4.14.142",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
@@ -126,10 +126,11 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
-    "react-redux": "^6.0.0",
+    "react-redux": "7.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "reselect": "4.0.0",
     "source-map-support": "^0.5.9",
     "typesafe-actions": "4.4.2"
   },
