--- a/package.json
+++ b/package.json
@@ -130,7 +130,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-observable": "1.2.0",
     "reselect": "4.0.0",
+    "rxjs": "6.5.3",
     "source-map-support": "^0.5.9",
     "typesafe-actions": "4.4.2"
   },
