--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "baseUrl": "./",
     "rootDir": "./",
     "jsx": "react",
     "module": "es2015",
@@ -11,7 +10,11 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "lib": ["es2015", "dom"],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./app",
+    "paths": {
+      "app/*": ["*"]
+    }
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
