--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev.babel.js",
     "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "test:clearcache": "cross-env NODE_ENV=test jest --clearCache"
   },
   "main": "./app/main.prod.js",
   "jest": {
@@ -38,7 +39,8 @@
     "testRegex": "tests/.*\\.test\\.(js|ts|tsx)$",
     "transform": {
       "\\.(ts|tsx)$": "ts-jest"
-    }
+    },
+    "testEnvironment": "jsdom"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
