Removed everything. New boilerplate.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,5 @@
 {
-  "overrides": [
-    {
-      "files": [".prettierrc", ".babelrc", ".stylelintrc"],
-      "options": {
-        "parser": "json",
-        "printWidth": 120,
-        "arrowParens": "always"
-      }
-    }
-  ],
-  "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 100,
+    "tabWidth": 4
 }
