--- a/package.json
+++ b/package.json
@@ -1,151 +1,149 @@
 {
-  "name": "mob-timer",
-  "version": "1.1.0",
-  "author": "Peter Spegel",
-  "license": "MIT",
-  "repository": "https://github.com/pspegel/mob-timer",
+  "name": "electron-react-typescript",
+  "version": "0.0.7",
+  "description": "",
+  "main": "./dist/main.js",
   "scripts": {
-    "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
-    "build-main": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.main.prod.babel.js --colors",
-    "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
-    "prestart:prod": "yarn build",
-    "start": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
-    "start:prod": "cross-env NODE_ENV=production electron ./app/main.prod.js",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev.babel.js",
-    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
-    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
-    "test:watch": "yarn test --watch",
-    "test:clearcache": "cross-env NODE_ENV=test jest --clearCache"
+    "build-main": "cross-env NODE_ENV=production webpack --config webpack.main.prod.config.js",
+    "build-renderer": "cross-env NODE_ENV=production webpack --config webpack.renderer.prod.config.js",
+    "build": "npm run build-main && npm run build-renderer",
+    "start-renderer-dev": "webpack-dev-server --config webpack.renderer.dev.config.js",
+    "start-main-dev": "webpack --config webpack.main.config.js && electron ./dist/main.js",
+    "start-dev": "cross-env START_HOT=1 npm run start-renderer-dev",
+    "prestart": "npm run build",
+    "start": "electron .",
+    "lint": "eslint --ext=jsx,js,tsx,ts src",
+    "test": "jest '(\\/test\\/(?!e2e/)).*'",
+    "pretest:e2e": "npm run build",
+    "test:e2e": "jest '(\\/test\\/e2e/).*'",
+    "pack": "npm run build && electron-builder --dir",
+    "dist": "npm run build && electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
-  "main": "./app/main.prod.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,test,mocks}/**/*.{json,css,scss,md}": [
+      "prettier --config ./.prettierrc --write"
+    ],
+    "{src,test,mocks}/**/*.{js,ts,tsx}": [
+      "prettier --config ./.prettierrc --write",
+      "eslint --ext=jsx,js,ts,tsx --fix src"
+    ]
+  },
   "jest": {
-    "testURL": "http://localhost/",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/fileMock.js",
-      "\\.(css|less|sass|scss)$": "identity-obj-proxy",
-      "app/(.*)": "<rootDir>/app/$1"
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
     },
+    "testRegex": "(/test/.+\\.spec)\\.tsx?$",
     "moduleFileExtensions": [
-      "js",
       "ts",
       "tsx",
-      "json"
+      "js",
+      "json",
+      "node"
     ],
-    "moduleDirectories": [
-      "node_modules",
-      "app"
-    ],
-    "testRegex": "tests/.*\\.test\\.(js|ts|tsx)$",
-    "transform": {
-      "\\.(ts|tsx)$": "ts-jest"
-    },
-    "testEnvironment": "jsdom"
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
+      "\\.(s?css|sass)$": "<rootDir>/mocks/styleMock.js"
+    }
   },
+  "build": {
+    "productName": "ProductName",
+    "appId": "org.your.productname",
+    "mac": {
+      "category": "your.app.category.type"
+    },
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/",
+      "node_modules/",
+      "package.json"
+    ],
+    "linux": {
+      "target": "deb"
+    },
+    "win": {
+      "target": "nsis"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:Robinfr/electron-react-typescript.git"
+  },
+  "author": {
+    "name": "Your name",
+    "email": "Your email"
+  },
+  "license": "SEE LICENSE",
+  "bugs": {
+    "url": "https://github.com/Robinfr/electron-react-typescript/issues"
+  },
+  "homepage": "https://github.com/Robinfr/electron-react-typescript",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-decorators": "^7.2.3",
-    "@babel/plugin-proposal-do-expressions": "^7.2.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-function-bind": "^7.2.0",
-    "@babel/plugin-proposal-function-sent": "^7.2.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
-    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@types/jest": "^23.3.11",
-    "@types/lodash": "4.14.142",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-redux": "7.1.4",
-    "@types/react-router-dom": "^4.3.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
-    "chalk": "^2.4.1",
-    "concurrently": "^4.1.0",
-    "connected-react-router": "^6.1.0",
-    "cross-env": "^5.2.0",
-    "cross-spawn": "^6.0.5",
-    "css-loader": "^2.1.0",
-    "detect-port": "^1.3.0",
-    "electron": "^4.0.1",
-    "electron-builder": "^20.38.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@hot-loader/react-dom": "^16.8.6",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-test-renderer": "^16.8.1",
+    "@types/webdriverio": "^4.8.7",
+    "@types/webpack-env": "^1.13.3",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "babel-loader": "^8.0.6",
+    "cross-env": "^5.1.3",
+    "css-loader": "^2.1.1",
+    "electron": "^3.1.9",
+    "electron-builder": "^22.3.2",
     "electron-devtools-installer": "^2.2.4",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5",
-    "fbjs-scripts": "^1.0.1",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^3.0.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prettier": "^1.15.3",
-    "react-test-renderer": "^16.7.0",
-    "rimraf": "^2.6.3",
+    "fork-ts-checker-webpack-plugin": "^1.3.4",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.1",
+    "image-webpack-loader": "^4.6.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^10.0.7",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
+    "react-hot-loader": "^4.8.8",
+    "react-test-renderer": "^16.8.6",
+    "redux-devtools-extension": "^2.13.5",
     "sass-loader": "^7.1.0",
-    "sinon": "^7.2.2",
+    "source-map-loader": "^0.2.4",
     "spectron": "^5.0.0",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "terser-webpack-plugin": "^1.2.1",
-    "ts-jest": "23.10.5",
-    "ts-loader": "^5.3.2",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "^3.2.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.28.3",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.0",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1",
-    "yarn": "^1.12.3"
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "devtron": "^1.4.0",
-    "electron-debug": "^2.0.0",
-    "electron-log": "^2.2.17",
-    "electron-updater": "^4.0.6",
-    "history": "^4.7.2",
-    "lodash": "4.17.15",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
-    "react-redux": "7.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-observable": "1.2.0",
-    "reselect": "4.0.0",
-    "rxjs": "6.5.3",
-    "source-map-support": "^0.5.9",
-    "typesafe-actions": "4.4.2"
-  },
-  "devEngines": {
-    "node": ">=7.x",
-    "npm": ">=4.x",
-    "yarn": ">=0.21.3"
-  },
-  "browserslist": "electron 1.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1"
+  }
 }
