--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-react-typescript",
-  "version": "0.0.7",
-  "description": "",
+  "name": "mob-timer",
+  "version": "1.2.0",
+  "description": "Timer for mob programming or pair programming",
   "main": "./dist/main.js",
   "scripts": {
     "build-main": "cross-env NODE_ENV=production webpack --config webpack.main.prod.config.js",
@@ -36,7 +36,7 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      ".+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/test/.+\\.spec)\\.tsx?$",
     "moduleFileExtensions": [
@@ -52,8 +52,8 @@
     }
   },
   "build": {
-    "productName": "ProductName",
-    "appId": "org.your.productname",
+    "productName": "mob-timer",
+    "appId": "spegel.peter.mobtimer",
     "mac": {
       "category": "your.app.category.type"
     },
@@ -74,76 +74,82 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:Robinfr/electron-react-typescript.git"
+    "url": "https://github.com/pspegel/mob-timer"
   },
   "author": {
-    "name": "Your name",
-    "email": "Your email"
+    "name": "Peter Spegel",
+    "email": "peter.spegel.umea@gmail.com"
   },
-  "license": "SEE LICENSE",
-  "bugs": {
-    "url": "https://github.com/Robinfr/electron-react-typescript/issues"
-  },
-  "homepage": "https://github.com/Robinfr/electron-react-typescript",
+  "license": "MIT",
+  "homepage": "https://github.com/pspegel/mob-timer",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@hot-loader/react-dom": "^16.8.6",
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/jest": "^24.0.13",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.9",
-    "@types/react-test-renderer": "^16.8.1",
-    "@types/webdriverio": "^4.8.7",
-    "@types/webpack-env": "^1.13.3",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^5.1.3",
-    "css-loader": "^2.1.1",
-    "electron": "^3.1.9",
-    "electron-builder": "^22.3.2",
-    "electron-devtools-installer": "^2.2.4",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.3.4",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.1",
-    "image-webpack-loader": "^4.6.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^10.0.7",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "react-hot-loader": "^4.8.8",
-    "react-test-renderer": "^16.8.6",
-    "redux-devtools-extension": "^2.13.5",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
-    "spectron": "^5.0.0",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.3.3",
+    "@hot-loader/react-dom": "16.8.6",
+    "@types/electron-devtools-installer": "2.2.0",
+    "@types/jest": "24.0.13",
+    "@types/react": "16.9.32",
+    "@types/react-dom": "16.9.6",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router-dom": "5.1.3",
+    "@types/react-test-renderer": "16.9.2",
+    "@types/webdriverio": "4.8.7",
+    "@types/webpack-env": "1.13.3",
+    "@typescript-eslint/eslint-plugin": "2.4.0",
+    "@typescript-eslint/parser": "2.4.0",
+    "babel-loader": "8.0.6",
+    "cross-env": "5.1.3",
+    "css-loader": "2.1.1",
+    "electron": "3.1.9",
+    "electron-builder": "22.3.2",
+    "electron-devtools-installer": "2.2.4",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "file-loader": "3.0.1",
+    "fork-ts-checker-webpack-plugin": "1.3.4",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "4.2.1",
+    "image-webpack-loader": "4.6.0",
+    "jest": "24.8.0",
+    "lint-staged": "10.0.7",
+    "node-sass": "4.13.0",
+    "prettier": "1.18.2",
+    "react-hot-loader": "4.8.8",
+    "react-test-renderer": "16.8.6",
+    "redux-devtools-extension": "2.13.5",
+    "sass-loader": "7.1.0",
+    "source-map-loader": "0.2.4",
+    "spectron": "5.0.0",
+    "style-loader": "0.23.1",
+    "ts-jest": "24.0.2",
+    "typescript": "3.4.5",
+    "webpack": "4.32.2",
+    "webpack-cli": "3.3.2",
+    "webpack-dev-server": "3.4.1",
+    "webpack-merge": "4.2.1"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "redux": "^4.0.1"
+    "connected-react-router": "6.8.0",
+    "lodash": "4.17.15",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.4",
+    "redux-observable": "1.2.0",
+    "reselect": "4.0.0",
+    "rxjs": "6.5.5",
+    "typesafe-actions": "4.4.2"
   }
 }
