--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prestart": "npm run build",
     "start": "electron .",
     "lint": "eslint --ext=jsx,js,tsx,ts src",
-    "test": "jest '(\\/test\\/(?!e2e/)).*'",
+    "test": "jest --watch",
     "pretest:e2e": "npm run build",
     "test:e2e": "jest '(\\/test\\/e2e/).*'",
     "pack": "npm run build && electron-builder --dir",
@@ -38,7 +38,7 @@
     "transform": {
       ".+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/test/.+\\.spec)\\.tsx?$",
+    "testRegex": "tests/.*\\.test\\.(js|ts|tsx)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -54,9 +54,6 @@
   "build": {
     "productName": "Mob timer",
     "appId": "spegel.peter.mobtimer",
-    "mac": {
-      "category": "your.app.category.type"
-    },
     "directories": {
       "output": "release"
     },
@@ -65,11 +62,8 @@
       "node_modules/",
       "package.json"
     ],
-    "linux": {
-      "target": "deb"
-    },
     "win": {
-      "target": "nsis"
+      "target": "portable"
     }
   },
   "repository": {
